# nix-pypi

./: .gitignore  flake.nix  pyproject.toml  requirements.nix
nixpy/: Cargo.toml
nixpy/src/: main.rs  mod.rs
src/nixpy/: __init__.py  core.py  distributions.py  export.py  parser.py  resolver.py  resources.py
