[project]
name = "nixpy"
version = "0.1.0"
description = "Auto-generates nix expressions"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "unearth>=0.16.1",
    "setuptools>=69.0.0",
    "pybind11>=2.13.1",
    "rich>=13.7.1",
    "resolvelib>=1.0.1",
    "packaging>=24.1",
    "requests>=2.28.2",
    "pip>=24.0",
    "setuptools_scm>=8.1.0"
]
requires-python = "<3.13,>=3.12"
license = {text = "MIT"}

[project.scripts]
nixpy = "nixpy:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
